@@ -58,6 +58,7 @@ h6 {
 }
 		
 img.toplogo {
+    width: 4em;
     vertical-align: middle;
 }
 
