@@ -3,7 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" type="text/css" href="R.css">
 </head><body>
-<h1>Package Index <img class="toplogo" src="logo.jpg" alt="[R logo]"></h1>
+<h1>Package Index <img class="toplogo" src="Rlogo.svg" alt="[R logo]"></h1>
 
 <hr>
 
